add: val dataset에 대한 confusion matrix를 시각화

--- a/data_analysis/beom_pre.ipynb
+++ b/data_analysis/beom_pre.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "((32470, 12), (7765, 12))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "4               30          ORG                 0               3         DAT  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "(32470, 12)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "(32424, 12)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "(32424, 12)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        " 'per:place_of_death': 1}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
        "22258              26         LOC    30  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
        "22258              26         LOC    30  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
        "13496              56         PER    29  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
        "13496              56         PER    29  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
        "((32470, 12), (32457, 12), (32464, 12))"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
        " 2334)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
        "[2334 rows x 12 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1840,7 @@
        " 43)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1876,14 +1876,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "이번 실로 좍좍 이것 어떤것들 언젠가 바꾸어서 말하면 이라면 한적이있다 붕붕 "
+      "게우다 이쪽 할때 펄렁 어느해 동안 뿐만 아니라 각종 저것 한 까닭에 "
      ]
     }
    ],
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2017,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2158,16 +2158,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoTokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2176,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2198,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2220,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2238,7 @@
        "'[CLS] 조지 해리슨 [SEP] 비틀즈 [SEP] 〈 Something 〉 는 조지 해리슨이 쓰고 비틀즈가 1969년 앨범 《 Abbey Road 》 에 담은 노래다. [SEP] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2240,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2255,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2273,7 @@
        "'[CLS] 〈 Something 〉 는 조지 해리슨이 쓰고 비틀즈가 1969년 앨범 《 Abbey Road 》 에 담은 노래다. [SEP] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]'"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2289,7 +2298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2304,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2313,7 +2322,7 @@
        "tensor([    0,   168, 30985, 14451])"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2325,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2334,7 +2343,7 @@
        "[0, 1, 2]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2345,7 +2354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2357,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2366,9 +2375,10 @@
      "text": [
       "===== before =====\n",
       "[CLS] 제10회 세계 육상 선수권 대회는 국제 육상 경기 연맹 ( IAAF ) ) 주관으로 2005년 8월 6일부터 14일까지 핀란드 헬싱키에 위치한 헬싱키 올림픽 스타디움에서 열린 국제 육상 대회이다. 1983년 제1회 대회 이후 22년 만에 헬싱키에서 개최됐다. 이 대회에서 장애인 육상 네 종목이 처음 시범 종목으로 도입됐으며, 여자 3000m 장애물 경주 종목이 추가되었다. 이로써 남녀 세부 종목이 거의 ( 남자 24개, 여자 23개 ) 균형을 이루게 됐으며, 남자 세부 종목에 해당하는 여자 종목이 없는 종목은 50 km 경보, 110m 허들 ( 여자는 100m 허들로 축소 ), 10종경기 ( 여자는 7종경기로 축소 세 개로 줄었다. [SEP] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n",
-      "[0, 1545, 2124, 3665, 8941, 3825, 2207, 3931, 2259, 3854, 8941, 3682, 12, 24610, 2106, 2314, 13, 5973, 6233, 5656, 2440, 28, 2429, 26, 2210, 3797, 3909, 2210, 2118, 1915, 2942, 2089, 2170, 4318, 2470, 1915, 2942, 2089, 4572, 14198, 27135, 4306, 3854, 8941, 3931, 18, 2440, 1545, 2083, 2124, 3931, 3719, 4107, 2440, 1038, 2170, 1915, 2942, 2089, 27135, 2367, 2062, 18, 1504, 3931, 27135, 13944, 8941, 752, 5260, 3790, 6796, 4334, 2367, 4007, 3883, 5592, 2037, 13302, 5586, 5260, 2052, 4140, 2359, 2062, 18, 1504, 2525, 5969, 7350, 5260, 2052, 12, 3997, 4056, 2019, 16, 2019, 13, 5238, 2069, 4046, 2318, 8097, 16, 3997, 7350, 5260, 2170, 4162, 2205, 2259, 3883, 5260, 2259, 5260, 3956, 6460, 11379, 9180, 2037, 1905, 2031, 12, 3883, 2259, 3911, 2037, 2031, 2200, 6009, 13, 16, 3633, 2033, 12, 3883, 2259, 27, 2033, 10470, 2200, 6009, 1269, 558, 2200, 1567, 2359, 2062, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "삭제된 토큰 >>\n",
+      "##종는 추가 허. ) 연맹년 네 2005 만일 이에서 이루되 올림픽었 종목1. 주관에서 경보\n",
       "===== after =====\n",
-      "[CLS] 제회 세계 육상 선수권 대회는 국제 육상 경기 ( IAAF ) 주관으로 2005년 8월 6일부터 14일지 헬싱키에 위치한 헬싱키 올림픽 스타디움에서 열린 국제 육상 대회.년 제1회 대회 이후 22년 만에 헬싱키에서됐다. 이 대회에서 장애인 육상 네 종목 처음 시범 도입됐으며 여자 3000m 장애물 경주 종목이 추가었다. 이써 남녀 세부 종목이 ( 남자 24개,개 ) 균형을 이루게 됐으며, 남자 세부 종목에 해당하는 여자 종목는 종목 50 km 경보 110m 허들 ( 여자는 100m들로 축소 ), 10종 ( 여자는 7종경기로 축소 세 개로 줄었다 [SEP] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n"
+      "[CLS] 제10회 세계 육상 선수권 대회는 국제 육상 경기 ( IAAF )으로년 8월 6부터 14일까지 핀란드 헬싱키에 위치한 헬싱키 스타디움 열린 국제 육상 대회이다 1983년 제회 대회 이후 22에 헬싱키에서 개최됐다 이 대회 장애인 육상 종목이 처음 시범 종목으로 도입됐으며, 여자 3000m 장애물 경주이다.로써 남녀 세부 종목이 거의 ( 남자 24개, 여자 23개 ) 균형을게 됐으며, 남자 세부 종목에 해당하는 여자 종목이 없는 종목은 50 km, 110m 허들 ( 여자는 100m들로 축소 ), 10종경기 ( 여자 7경기로 축소 세 개로 줄었다. [SEP] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD] [PAD]\n"
      ]
     }
    ],
@@ -2389,6 +2399,7 @@
     "        \n",
     "            count = 0\n",
     "            del_idx_list = set()\n",
+    "            del_idx_show = []\n",
     "            for random_idx in random_idx_list:\n",
     "                if count == pad_idx - max_len: break\n",
     "\n",
@@ -2396,10 +2407,12 @@
     "                if word[0] != '[' and word[-1] != ']':\n",
     "                    count += 1\n",
     "                    del_idx_list.add((random_idx, int(x[random_idx])))\n",
+    "                    del_idx_show.append(random_idx)\n",
     "                    \n",
     "            x_ = sorted(list(origin_idx_list - del_idx_list))\n",
+    "            print(\"삭제된 토큰 >>\")\n",
+    "            print(tokenizer.decode(x[del_idx_show]))\n",
     "            x = [i[1] for i in x_]\n",
-    "            print(x)\n",
     "            x = torch.tensor(x)\n",
     "            print(\"=\"*5, \"after\", \"=\"*5)\n",
     "            print(tokenizer.decode(x))\n",
